@@ -10,6 +10,7 @@
 	- Don't show hidden release relations on producer pages
 	- Hide the vote dropdown on v+ pages when the VN is already on the wishlist
 	- Don't search for the ADV category when searching for the Game Boy Advance
+	- Keep VN relations on r+ pages ordered by title
 
 2.1 - 2008-12-29
 	- Skin support
